# thunder_subtitle_srt

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DEPLOY.md  ROADMAP.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  supervisord.conf
.github/workflows/: ci.yml  docker-release.yml  publish.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: directory-structure.md  error-handling.md  fastapi-architecture.md  index.md  quality.md
.trellis/spec/frontend/: api-integration.md  authentication.md  components.md  css-layout.md  directory-structure.md  (+5 more)
demo/: README.md  metadata.json
demo/src/: App.tsx  i18n.ts  index.css
design/jellyfin_thunder_subtitle/: code.html
design/media_management_utility/: DESIGN.md
design/thunder_subtitle_1/: code.html
design/thunder_subtitle_2/: code.html
design/thunder_subtitle_3/: code.html
thunder-subtitle-android/: settings.gradle.kts
thunder-subtitle-android/app/: build.gradle.kts  proguard-rules.pro
thunder-subtitle-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
thunder-subtitle-api/app/: _cli_imports.py  config.py  main.py
thunder-subtitle-api/app/api/: config.py  health_check.py  media.py  review.py  subtitle.py  tasks.py
thunder-subtitle-api/app/auth/: dependencies.py  router.py
thunder-subtitle-api/app/models/: schemas.py
thunder-subtitle-api/app/services/: config_service.py  health_service.py  review_service.py  scan_service.py  subtitle_service.py
thunder-subtitle-api/app/ws/: manager.py
thunder-subtitle-cli/: package.json  pnpm-lock.yaml  tsconfig.json
thunder-subtitle-cli/src/: api.ts  download.ts  index.ts  search.ts  types.ts  ui.ts
thunder-subtitle-py/: README.md  cli.py  pyproject.toml
thunder-subtitle-py/commands/: config.py  download.py  dump.py  review.py  scan.py  search.py
thunder-subtitle-py/src/: api.py  config.py  download.py  exceptions.py  models.py  reviewer.py  scanner.py  types.py  ui.py  utils.py
thunder-subtitle-py/src/health/: __init__.py  base.py
thunder-subtitle-py/src/health/checkers/: cleanup.py  image_assets.py  nfo.py
thunder-subtitle-py/src/reviewer/: __init__.py  _encoding.py  _marker.py  _output.py  _review.py  _srt.py
thunder-subtitle-py/src/scanner/: __init__.py  _dir.py  _io.py  _parallel.py  _processor.py  _skip.py
thunder-subtitle-py/tests/: test_api.py  test_cli.py  test_config.py  test_download.py  test_integration.py  test_reviewer.py  test_scanner_helpers.py  test_utils.py
thunder-subtitle-web/: .npmrc  README.md  next.config.ts  package.json  pnpm-lock.yaml
thunder-subtitle-web/public/: manifest.json  sw-register.js  sw.js
(+222 files in other folders)
